--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-description: "This isn't the thing you are looking for."
-header-img: "img/404-bg.jpg"
+description: This isn't the thing you are looking for.
+header-img: img/header-img/cosmic-teapot.jpg
 permalink: /404.html
 ---
 
