--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: "About"
-description: "Hey, this is ddddxxx."
-header-img: "img/about-bg.jpg"
+title: About
+description: Hey, this is ddddxxx.
+header-img:
 ---
 
 <!-- Language Selector -->
