--- a/tags.html
+++ b/tags.html
@@ -1,8 +1,8 @@
 ---
 title: Tags
 layout: default
-description: keep hungry keep foolish
-header-img: "img/tag-bg.jpg"
+description: Just tags
+header-img:
 ---
 
 <!-- Page Header -->
